# magma-boba

./: CMakeLists.txt  Makefile  local_build_cuda.bash  local_build_hip.bash  magmaConfig.cmake.in  make.inc.cuda  make.inc.hip
include/: magma_auxiliary.h  magma_htc.h  magma_types.h  magmablas_z.h
interface_sycl/: copy_v2.dp.cpp
magmablas/: Makefile.src  trmm_template_kernel.cuh  zposv_fp16_kernels.cu  ztrmm_vbatched.cpp  ztrsm_vbatched.cpp
sparse/blas_sycl/: zmergecg.dp.cpp
sparse/include/: magmasparse_types.h
sparse/src/: zbicg.cpp
src/: Makefile.src  dfgmres_spd_gpu.cpp  dshposv_gpu.cpp  shpotrf_gpu.cpp  zgeqrf_panel_batched.cpp
test_export/: CMakeLists.txt  example_v1.cpp  local_build_cuda.bash  local_build_hip.bash
testing/: Makefile.src  testing_dshposv_gpu.cpp  testing_zgetrf_batched.cpp
tools/: hipify-perl  package-routine.py
