cmake_minimum_required(VERSION 3.21.3)
project(example LANGUAGES CXX )
set(CMAKE_CXX_STANDARD 11)
if (MAGMA_DIR)
    if (NOT EXISTS "${MAGMA_DIR}")
        message(FATAL_ERROR "Given MAGMA_DIR does not exist: ${MAGMA_DIR}")
    endif()

    if (NOT IS_DIRECTORY "${MAGMA_DIR}")
        message(FATAL_ERROR "Given MAGMA_DIR is not a directory: ${MAGMA_DIR}")
    endif()
    find_package(magma REQUIRED PATHS ${MAGMA_DIR} )
    message(STATUS "Checking for expected MAGMA target 'MAGMA'")
    if (NOT TARGET magma)
        message(FATAL_ERROR "MAGMA failed to load: ${MAGMA_DIR}")
    else()
        message(STATUS "MAGMA loaded: ${MAGMA_DIR}")
        set(MAGMA_FOUND TRUE CACHE BOOL "")
    endif()
else()
    message(STATUS "MAGMA support is OFF")
    set(MAGMA_FOUND FALSE CACHE BOOL "")
endif()

add_executable(example example_v1.cpp)
target_link_libraries(example PRIVATE magma)

if(ENABLE_OPENMP)
    find_package(OpenMP)
    if(OpenMP_CXX_FOUND)
        target_link_libraries( example PRIVATE OpenMP::OpenMP_CXX)
    endif()
endif()

if (ENABLE_CUDA)
    set_property(TARGET example PROPERTY CUDA_STANDARD "11")
    set_source_files_properties (example_v1.cpp PROPERTIES LANGUAGE CUDA)
    if(ENABLE_OPENMP)
        set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler -fopenmp")
    endif()
endif()


